# chors

./: .gitignore  Cargo.toml  README.md  show_colors.sh
src/: app.rs  cli.rs  errors.rs  lib.rs  main.rs  model.rs  parse.rs  ui.rs  update.rs  utils.rs  view.rs
src/model/: filter.rs  form.rs  mod.rs  model.rs  task.rs
src/tui/: cli.rs  errors.rs  mod.rs  run.rs  style.rs  view.rs
src/update/: history.rs  message.rs  mod.rs  update.rs
src/utils/: mod.rs  reorderable_map.rs
