[package]
name = "chors"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
indexmap = { version = "2.2.6", features = ["serde"]}
ratatui = "0.26.3"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
