[package]
name = "chors"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
indexmap = { version = "2.2.6", features = ["serde"]}
nom = "7.1.3"
ratatui = "0.26.3"
regex = "1.10.5"
rpds = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.8.0", features = ["v7", "serde"] }

[[bin]]
name = "stress_test"
path = "src/bin/stress_test.rs"
